# liballium

./: .gitignore  CMakeLists.txt  COPYING  Makefile.am  README  configure.ac  liballium.pc.in
examples/: CMakeLists.txt  ptcfg_example.c
include/: allium.h  allium_ptcfg.h
src/: CMakeLists.txt  allium_ptcfg.c  allium_util.c  bstrlib.c
tests/: CMakeLists.txt  ptcfg_test.c
